--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This is a comment. Website Template By: Tobi Thai, 11/16/2025 -->
+<!-- This is a comment. Website Template By: Tobi Thai, 11/30/2025 -->
 <html lang="en">
 <head>
     <title>Times Art - About Us</title>
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/TimesArtLogoCopy.png" type="image/png"> 
+    <link rel="icon" href="images/TimesArtLogo.png" type="image/png"> 
 </head>
 <body onload="displayLastModified()">
 
@@ -19,7 +19,7 @@
         <!-- Created by Tobi Thai -->
         <!-- Use the header area for the website name or logo -->
         <header>
-            <a href="indexHP.html"><img src="images/TimesArtLogoCopy.png" alt="Times Art Logo"></a>
+            <a href="index.html"><img src="images/TimesArtLogo.png" alt="Times Art Logo"></a>
         </header>
 
         <!-- Use the nav area to add hyperlinks to other pages within the website -->
@@ -57,13 +57,13 @@
                 <h1>Q&A (Questions and Answers)</h1>
                 <dl>
                     <dt>What is Times Art?</dt>
-                    <dd>Times Art is a digital art showcase museum, where artists from across the world can send in their own art via email, to be digitally displayed in the art gallery, and may even be displayed in the "Top 30 Weekly Art Showcase".</dd>
+                    <dd>Times Art is a digital art showcase museum, where artists from around the world, can send in their own art via Contact Us page. Being digitally displayed in the art gallery, and may even be displayed in the "Top 20 Weekly Art Showcase."</dd>
 
                     <dt>How was Times Art created?</dt>
                     <dd>Times Art was a website idea made by the creator "Tobi Thai", who's idea was to display his and potentialy anyone elses art, to be digitally admired and viewed by others.</dd>
 
-                    <dt>How does the "Top 30 Weekly Art Showcase" work?</dt>
-                    <dd>The idea works via the number of likes given from the art in the gallery tab. Calculating the likes, the top 30 most liked art pieces will be displayed for next weeks Top 30 Art Showcase. </dd>
+                    <dt>How does the "Top 20 Weekly Art Showcase" work?</dt>
+                    <dd>The idea works via the number of likes given from the art in the gallery tab. Calculating the likes, the top 20 most liked art pieces will be displayed for next weeks Top 20 Art Showcase. </dd>
                 </dl>
 
                 <p>If you have any questions regarding sending art or in need of more info about the website, you may visit the <a href="contactUs.html" class="external-contact-us">Contact Us</a> page.</p>
@@ -76,7 +76,7 @@
         <footer>
             <p>&copy; Copyright 2021. All Rights Reserved.</p>
             <p><a href="mailto:tthai3@student.clayton.edu">tthai3@student.clayton.edu</a></p>
-            <p>Assignment 7 due on 11/16/2025 at 11:59 pm</p>
+            <p>Assignment 7 due on 11/30/2025 at 11:59 pm</p>
             <div id="lastModified"></div>
         </footer>
 
