--- a/contactUs.html
+++ b/contactUs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This is a comment. Website Template By: Tobi Thai, 11/16/2025 -->
+<!-- This is a comment. Website Template By: Tobi Thai, 11/30/2025 -->
 <html lang="en">
 <head>
     <title>Times Art - Contact Us</title>
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/TimesArtLogoCopy.png" type="image/png"> 
+    <link rel="icon" href="images/TimesArtLogo.png" type="image/png"> 
 </head>
 <body onload="displayLastModified()">
 
@@ -19,7 +19,7 @@
         <!-- Created by Tobi Thai -->
         <!-- Use the header area for the website name or logo -->
         <header>
-            <a href="indexHP.html"><img src="images/TimesArtLogoCopy.png" alt="Times Art Logo"></a>
+            <a href="index.html"><img src="images/TimesArtLogo.png" alt="Times Art Logo"></a>
         </header>
 
         <!-- Use the nav area to add hyperlinks to other pages within the website -->
@@ -113,7 +113,7 @@
         <footer>
             <p>&copy; Copyright 2021. All Rights Reserved.</p>
             <p><a href="mailto:tthai3@student.clayton.edu">tthai3@student.clayton.edu</a></p>
-            <p>Assignment 7 due on 11/16/2025 at 11:59 pm</p>
+            <p>Assignment 7 due on 11/30/2025 at 11:59 pm</p>
             <div id="lastModified"></div>
         </footer>
 
