--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This is a comment. Website Template By: Tobi Thai, 11/16/2025 -->
+<!-- This is a comment. Website Template By: Tobi Thai, 11/30/2025 -->
 <html lang="en">
 <head>
     <title>Times Art - Gallery</title>
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/TimesArtLogoCopy.png" type="image/png"> 
+    <link rel="icon" href="images/TimesArtLogo.png" type="image/png"> 
 </head>
 <body onload="displayLastModified()">
 
@@ -19,7 +19,7 @@
         <!-- Created by Tobi Thai -->
         <!-- Use the header area for the website name or logo -->
         <header>
-            <a href="indexHP.html"><img src="images/TimesArtLogoCopy.png" alt="Times Art Logo"></a>
+            <a href="index.html"><img src="images/TimesArtLogo.png" alt="Times Art Logo"></a>
         </header>
 
         <!-- Use the nav area to add hyperlinks to other pages within the website -->
@@ -46,75 +46,123 @@
                 <h2>The Global Art Gallery Showcase</h2>
 
                 <div id="art1">
-                    <h3>Charcoal Flower</h3>
                     <img src="images/MyArt01.png" alt="Times Art 01">
+                    <h3>Charcoal Flower</h3>
                     <p>Artist: Tobi — A moody piece exploring form and shadow through the softness of charcoal.</p>
                 </div>
 
                 <div id="art2">
-                    <h3>Lost</h3>
                     <img src="images/MyArt02.png" alt="Times Art 02">
+                    <h3>Lost</h3>
                     <p>Artist: notTobi — A minimalist piece that captures solitude through subtle contrast.</p>
                 </div>
 
                 <div id="art3">
-                    <h3>Bocchi vs. The World</h3>
                     <img src="images/MyArt03.png" alt="Times Art 03">
+                    <h3>Bocchi vs. The World</h3>
                     <p>Artist: maybeTobi — A dynamic artwork blending humor and tension in vivid color.</p>
                 </div>
 
                 <div id="art4">
-                    <h3>Akira</h3>
                     <img src="images/MyArt04.jpeg" alt="Times Art 04">
+                    <h3>Akira</h3>
                     <p>Artist: possiblyTobi — A hot rod drawing of a iconic scene known as the "Akira Drift".</p>
                 </div>
 
                 <div id="art5">
-                    <h3>Akira</h3>
-                    <img src="images/MyArt07.jpeg" alt="Times Art 05">
-                    <p>Artist: possiblyTobi — A hot rod drawing of a iconic scene known as the "Akira Drift".</p>
+                    <img src="images/MyArt05.jpeg" alt="Times Art 05">
+                    <h3>Fragrant Flower</h3>
+                    <p>Artist: smellsLikeTobi — A beautiful scene of a happy moment.</p>
                 </div>
 
                 <div id="art6">
-                    <h3>Akira</h3>
-                    <img src="images/MyArt08.jpeg" alt="Times Art 05">
-                    <p>Artist: possiblyTobi — A hot rod drawing of a iconic scene known as the "Akira Drift".</p>
+                    <img src="images/MyArt06.jpeg" alt="Times Art 06">
+                    <h3>Wandering Vagabond</h3>
+                    <p>Artist: Musashi — "All truly strong people are kind."</p>
                 </div>
 
-                <div id="art5">
-                    <h3>Akira</h3>
-                    <img src="images/MyArt07.jpeg" alt="Times Art 05">
-                    <p>Artist: possiblyTobi — A hot rod drawing of a iconic scene known as the "Akira Drift".</p>
+                <div id="art7">
+                    <img src="images/MyArt07.jpeg" alt="Times Art 07">
+                    <h3>Goodbye</h3>
+                    <p>Artist: Yuji — Two friends saying goodbye to someone, but who is the someone?</p>
                 </div>
 
-                <div id="art6">
-                    <h3>Akira</h3>
-                    <img src="images/MyArt08.jpeg" alt="Times Art 05">
-                    <p>Artist: possiblyTobi — A hot rod drawing of a iconic scene known as the "Akira Drift".</p>
+                <div id="art8">
+                    <img src="images/MyArt08.jpeg" alt="Times Art 08">
+                    <h3>Memories</h3>
+                    <p>Artist: Kenny — Two friends laughing at fond memories.</p>
                 </div>
 
-                <div id="art1">
-                    <h3>Charcoal Flower</h3>
-                    <img src="images/MyArt01.png" alt="Times Art 01">
-                    <p>Artist: Tobi — A moody piece exploring form and shadow through the softness of charcoal.</p>
+                <div id="art9">
+                    <img src="images/MyArt09.jpeg" alt="Times Art 09">
+                    <h3>Firepower</h3>
+                    <p>Artist: maybeTobi — A fight against literal firepower.</p>
                 </div>
 
-                <div id="art2">
-                    <h3>Lost</h3>
-                    <img src="images/MyArt02.png" alt="Times Art 02">
-                    <p>Artist: notTobi — A minimalist piece that captures solitude through subtle contrast.</p>
+                <div id="art10">
+                    <img src="images/MyArt10.jpeg" alt="Times Art 10">
+                    <h3>Face</h3>
+                    <p>Artist: Tobi — With a face full of detail.</p>
                 </div>
 
-                <div id="art3">
-                    <h3>Bocchi vs. The World</h3>
-                    <img src="images/MyArt03.png" alt="Times Art 03">
-                    <p>Artist: maybeTobi — A dynamic artwork blending humor and tension in vivid color.</p>
+                <div id="art11">
+                    <img src="images/MyArt11.jpeg" alt="Times Art 11">
+                    <h3>Merry Christmas</h3>
+                    <p>Artist: Yuji — Enjoying the feeling of the winter season.</p>
                 </div>
 
-                <div id="art4">
-                    <h3>Akira</h3>
-                    <img src="images/MyArt04.jpeg" alt="Times Art 04">
-                    <p>Artist: possiblyTobi — A hot rod drawing of a iconic scene known as the "Akira Drift".</p>
+                <div id="art12">
+                    <img src="images/MyArt12.jpeg" alt="Times Art 12">
+                    <h3>Copy</h3>
+                    <p>Artist: Asa Mitaka — An evil copy emerges into the light.</p>
+                </div>
+
+                <div id="art13">
+                    <img src="images/MyArt13.jpeg" alt="Times Art 13">
+                    <h3>Angel</h3>
+                    <p>Artist: Hana — An angel that finally grew their wings at the last moment.</p>
+                </div>
+
+                <div id="art14">
+                    <img src="images/MyArt14.jpeg" alt="Times Art 14">
+                    <h3>Wild Flower</h3>
+                    <p>Artist: Strawberry — A women with a flower groing out her eye.</p>
+                </div>
+
+                <div id="art15">
+                    <img src="images/MyArt15.jpeg" alt="Times Art 15">
+                    <h3>Bandit's Secret</h3>
+                    <p>Artist: Chrollo — Can you steal dreams?</p>
+                </div>
+
+                <div id="art16">
+                    <img src="images/MyArt16.jpeg" alt="Times Art 16">
+                    <h3>Phoenix</h3>
+                    <p>Artist: Samura — The phoenix emerges from the onslaught.</p>
+                </div>
+
+                <div id="art17">
+                    <img src="images/MyArt17.jpeg" alt="Times Art 17">
+                    <h3>Vigor</h3>
+                    <p>Artist: Uruha — A man with relentless vigor refuses to back down.</p>
+                </div>
+
+                <div id="art18">
+                    <img src="images/MyArt18.jpeg" alt="Times Art 18">
+                    <h3>Beyond Journey's End</h3>
+                    <p>Artist: Frieren — Three friends adventuring to find purpose.</p>
+                </div>
+
+                <div id="art19">
+                    <img src="images/MyArt19.jpeg" alt="Times Art 19">
+                    <h3>Scarecrow</h3>
+                    <p>Artist: Junji Ito — A simple scarecrow, what more is their to it.</p>
+                </div>
+
+                <div id="art20">
+                    <img src="images/MyArt20.jpeg" alt="Times Art 20">
+                    <h3>Monster Hunter</h3>
+                    <p>Artist: Velou — A boy becomes a man by defeating the monster.</p>
                 </div>
 
             </section>
@@ -125,7 +173,7 @@
         <footer>
             <p>&copy; Copyright 2021. All Rights Reserved.</p>
             <p><a href="mailto:tthai3@student.clayton.edu">tthai3@student.clayton.edu</a></p>
-            <p>Assignment 7 due on 11/16/2025 at 11:59 pm</p>
+            <p>Assignment 7 due on 11/30/2025 at 11:59 pm</p>
             <div id="lastModified"></div>
         </footer>
 
