--- a/aboutUs.html
+++ b/aboutUs.html
@@ -75,7 +75,7 @@
         <!-- Use the footer area to add webpage footer content -->
         <footer>
             <p>&copy; Copyright 2021. All Rights Reserved.</p>
-            <p><a href="mailto:tthai3@student.clayton.edu">tthai3@student.clayton.edu</a></p>
+            <p><a href="mailto:tobi.thai06@gmail.com">tobi.thai06@gmail.com</a></p>
             <p>Assignment 7 due on 11/30/2025 at 11:59 pm</p>
             <div id="lastModified"></div>
         </footer>
